--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 		<div class="container">
 			<div class="image-container">
 				<img
-					src="/pictures/tree.jpg"
+					src="./pictures/tree.jpg"
 					alt="picture of leafs"
 					class="tree-background"
 				/>
 				<div class="container-image-odin">
-					<img src="/pictures/odin-lined.png" alt="odin logo" />
+					<img src="./pictures/odin-lined.png" alt="odin logo" />
 					<span>ODIN</span>
 				</div>
 			</div>
